// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalculationResultSelectors getCalculationInputs when inputs are defined should return inputs 1`] = `
Array [
  Object {
    "hasNestedStructure": true,
    "title": "some title",
  },
]
`;

exports[`CalculationResultSelectors getCalculationMessages when messages are defined should return messages 1`] = `
Object {
  "errors": Array [],
  "notes": Array [
    "some note",
  ],
  "warnings": Array [],
}
`;

exports[`CalculationResultSelectors getEndPositions getReportSelectionTypes when multiple conditions are met should include all applicable report selection types 1`] = `
Array [
  Object {
    "name": "reportInputs",
  },
  Object {
    "name": "startPosition",
  },
  Object {
    "name": "endPosition",
  },
  Object {
    "name": "radialClearance",
  },
  Object {
    "name": "clearanceClasses",
  },
  Object {
    "name": "mountingToolsAndUtilities",
  },
  Object {
    "name": "mountingInstructions",
  },
  Object {
    "name": "reportMessages",
  },
]
`;

exports[`CalculationResultSelectors getMountingRecommendations when mounting recommendations are defined should return mounting recommendations 1`] = `
Array [
  "first recommendation",
  "second recommendation",
]
`;

exports[`CalculationResultSelectors getMountingTools when mounting tools are defined should return mounting tools 1`] = `
Object {
  "additionalTools": Array [],
  "hydraulicNut": Array [],
  "locknut": Array [],
  "pumps": Object {
    "items": Array [],
    "title": "",
  },
  "sleeveConnectors": Array [],
}
`;

exports[`CalculationResultSelectors isResultAvailable getReportSelectionTypes when reports types are available should return types list 1`] = `
Array [
  Object {
    "name": "reportInputs",
  },
  Object {
    "name": "mountingToolsAndUtilities",
  },
  Object {
    "name": "mountingInstructions",
  },
  Object {
    "name": "reportMessages",
  },
]
`;
